--- a/play.html
+++ b/play.html
@@ -30,11 +30,14 @@
     <p class="basildon speech">Ah! I hate being educated!</p>
 
     <h4 class="name">MRS. MARCHMONT.</h4>
-    <p class="marchmont speech">So do I. It puts one almost on a level with the commercial classes, doesn’t it? But dear Gertrude Chiltern is always telling me that I should have some serious purpose in life. So I come here to try to find one.</p>
+    <p class="marchmont speech">So do I. It puts one almost on a level with the commercial classes, doesn’t it? But dear
+        Gertrude Chiltern is always telling me that I should have some serious purpose in life. So I come here to try to
+        find one.</p>
 
     <h4 class="name">LADY BASILDON.</h4>
     <p class="stage-direction">[_Looking round through her lorgnette_.]</p>
-    <p class="basildon speech">I don’t see anybody here to-night whom one could possibly call a serious purpose. The man who took me in to dinner talked to me about his wife the whole time.</p>
+    <p class="basildon speech">I don’t see anybody here to-night whom one could possibly call a serious purpose. The man
+        who took me in to dinner talked to me about his wife the whole time.</p>
 
     <h4 class="name">MRS. MARCHMONT.</h4>
     <p> How very trivial of him!</p>
@@ -59,7 +62,27 @@
     <h4 class="name">MRS. MARCHMONT.</h4>
     <p class="stage-direction">[_Rising_.]</p>
     <p class="marchmont speech">And how well it becomes us, Olivia!</p>
-
+    <table>
+        <thead>
+            <tr>
+                <th>actor</th>
+                <th>pay</th>
+                <th>CHARACTER</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>leonardo dicaprio<br></td>
+                <td>$1<br></td>
+                <td>MARCHMONT<br></td>
+            </tr>
+            <tr>
+                <td>aaron bopp<br></td>
+                <td>$4,999,999</td>
+                <td>BASILDON</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
